# LLMTools-HMS

./: .gitignore  Dockerfile  README.md  compose-up.sh  docker-compose.gpu.yml  docker-compose.yml  env  pyproject.toml
bash_scripts/: docker_entry  o2activate
demos/: README.md
demos/ChatGPTEdu/: README.md
demos/Ollama/: README.md
demos/Sandbox/: README.md  readme.md.txt
demos_gui/Ollama/: README.md  o2-demo.ipynb  requirements.txt
demos_gui/Sandbox/: README.md
docs/: installation.md
examples/: Hello-Ollama.ipynb
examples/Azure AI Platform/: Azure-Exercise-Demo.ipynb
examples/Longwood Cluster/: README.md
examples/O2 Cluster/: o2-demo.ipynb
notebooks/: Azure-L4-Example.ipynb  Hello-Ollama.ipynb  MedAI-Ollama.ipynb
notebooks/Azure AI Platform/: README.md
notebooks/Longwood Cluster/: README.md  longwood-demo.py
notebooks/O2 Cluster/: README.md
notebooks/Ollama/: LLMTools-HMS.lnk
src/llmtools/: AUTHORS  __init__.py  ollamamodel.py
temp/: FreeQuery.ipynb  FreeQuery2.ipynb  TaskExamples.ipynb  classifier.ipynb
test_temp/: README.md  longwood-demo.py  requirements.txt
tests/: test_ollama.py
