[project]
name = "llmtools"
dynamic = ["version"]
description = "A repository for getting started with LLM resources at Harvard Medical School"
readme = "README.md"
authors = [
    { name = "Andreas Werdich", email = "andreas_werdich@hms.harvard.edu" }
]
requires-python = ">=3.12"
dependencies = [
    "flake8>=7.3.0",
    "jupyterlab>=4.4.9",
    "numpy>=2.3.3",
    "ollama>=0.6.0",
    "pandas>=2.3.3",
    "pandas-stubs>=2.3.2.250926",
    "pyarrow>=21.0.0",
    "pytest>=8.4.2",
    "tqdm>=4.67.1",
]

[project.scripts]
llmtools = "llmtools:main"

[build-system]
requires = ["setuptools>=41", 
            "wheel", 
            "setuptools-git-versioning>=2.0,<3"]
build-backend = "setuptools.build_meta"

[tool.uv]
python-preference = "only-system"

[tool.setuptools]
# this package will read some included files in runtime, avoid installing it as .zip
zip-safe = false

[tool.setuptools.package-data]
# include VERSION file to a package
llmtools = ["VERSION"]

[tool.setuptools-git-versioning]
enabled = true
version_file = "llmtools/VERSION"
